# When needed, run the appropriate tool to extract translatable strings from
# the application sources and other files. This will typically be the xgettext
# tool, whose options we use to fill in some of the fields in the generated POT
# file.
i18n.gettext('ambient_light',
    preset: 'glib',
    args: [
        '--copyright-holder=Purism SPC',
        '--package-name=Ambient Light',
        '--package-version=' + meson.project_version(),
        '--msgid-bugs-address=david.boddie@puri.sm'
    ]
)
